5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1621_2927.log
== TEST (2019-04-01 19:24:43) 
-- CODE:
sucos = int(input"")
refrigerantes = int(input"")
salgados = int (input"")
round(x , 2)
print(refrigerantes+salgados)
-- ERROR:
File "XXXX", line 1
    sucos = int(input"")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:25:00) 
-- CODE:
refrigerantes = int(input"")
salgados = int (input"")
round(x , 2)
print(refrigerantes+salgados)
-- ERROR:
File "XXXX", line 1
    refrigerantes = int(input"")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:25:52) 
-- CODE:
refrigerantes = int(input"")
salgados = int (input"")
ref+salgados
round(x , 2)
print(refrigerantes+salgados)
-- ERROR:
File "XXXX", line 1
    refrigerantes = int(input"")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:56) 
-- CODE:
sucos int(input"3,00")
refrigerantes int(input "3,50")
salgados int(input"1,50")
valor da bebida(vb) int(input"3,5")
quantidade de esfirras(qe) int(input"2")
print(vb+qe)
round (x , 2)
-- ERROR:
File "XXXX", line 1
    sucos int(input"3,00")
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:49:54) 
-- CODE:
refrigerantes float(input "3,50")
salgados int(input"1,50")
valor da bebida(vb) int(input"3,5")
quantidade de esfirras(qe) int(input"2")
print(vb+qe)
round (x , 2)
-- ERROR:
File "XXXX", line 1
    refrigerantes float(input "3,50")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
